creusot/tests/should_fail/prusti/with_static/arg_with_static.stderr
error[creusot]: the expression's lifetime `'a` must match the current time slice `'static` (found `&'a u32`, expected `&'static u32`)
 --> arg_with_static.rs:9:34
  |
9 |     requires_with_static::<&u32>(x)
  |                                  ^

error: aborting due to previous error

